11.0a/sis3820.md
|  |  |  |
| --- | --- | --- |
| NSCL DAQ Software Documentation |
| Prev |  | Next |


---

# <a name="vmusb3-sis3820"></a>sis3820

<a name="AEN56317"></a>## Name

sis3820 -- Create and configure SIS 3820 scaler modules

<a name="AEN56320"></a>## Synopsis

**sis3820 create *name base ?option value...?*
**

**sis3820 config *name option value ...*
**

**sis3820 cget *name*
**

<a name="AEN56330"></a>## DESCRIPTION

Creates and configures the SIS3820 32 channel scaler for use in
               a stack.   The **create** subcommand creates a new
               module with a base address of `base`, and
               a name `name` which will be used to refer
               to this module in later configuration commands.

The scaler readout will result in an array of 32 channels
               of scaler data placed in the buffer.  The first longword of this
               data is channel 0, the last, channel 1, unless the scaler in in
               `-timestamp` mode in which case the data are three
               longwords that consist of channel 0, channel 16 and the high bits
               register that has the top 16 bits of each of those channels as
               a 48 bit scaler. In the timestamp mode, the scaler values are 
               latched when a logic signal arrives on control input 1, because
               the module is configured for control input mode 1.

The **config** sub-command configures the options
               for the scaler `name`.  The configuration
               is expressed as a series of one or more
               `option value` pairs.  Options may have
               default values and are validity checked to ensure that
               valid values are supplied.  See OPTIONS below for more information
               about the option keywords that are supported and their legal values.

The **cget** sub-command returns the current module
               configuration.  The configuration is returned as a Tcl list of
               `option value` pairs.  See
               OPTIONS below for a description of the options ans values
               that are returned.  You should not rely on the list being in any
               specific order.  While the list will have a deterministic order,
               if additional option keywords are added later on, this order may
               change.

<a name="AEN56345"></a>## OPTIONS



`-base` `value`Allows you to override the initial base address of the module,
                  specified when the module was created.

`--timestamp` `on | off`If this option is true, the scaler is read in timestamp mode as
                    2 48 bit scalers.  If false (the default), 32 bits are read for
                    each channel.

<a name="AEN56360"></a>## EXAMPLES

The example below configures an SIS 3820 scaler to have a base
               address of 0x38000000

<a name="AEN56363"></a>**Example 1. Configuring an SIS3820 scaler module**

```
sis3820 create scaler1 0x38000000
               
```

---

|  |  |  |
| --- | --- | --- |
| Prev | Home | Next |
| sis330x | Up | v830 |
