12.0pre/sis3820.md
|  |  |  |
| --- | --- | --- |
| NSCL DAQ Software Documentation |
| Prev |  | Next |


---

# <a name="vmusb3-sis3820"></a>sis3820

<a name="AEN73372"></a>## Name

sis3820 -- Create and configure SIS 3820 scaler modules

<a name="AEN73375"></a>## Synopsis

**sis3820 create *name base ?option value...?*
**

**sis3820 config *name option value ...*
**

**sis3820 cget *name*
**

<a name="AEN73385"></a>## DESCRIPTION

Creates and configures the SIS3820 32 channel scaler for use in
               a stack.   The **create** subcommand creates a new
               module with a base address of `base`, and
               a name `name` which will be used to refer
               to this module in later configuration commands.

The scaler readout will result in an array of 32 channels
               of scaler data placed in the buffer.  The first longword of this
               data is channel 0, the last, channel 1, unless the scaler in in
               `-timestamp` mode in which case the data are three
               longwords that consist of channel 0, channel 16 and the high bits
               register that has the top 16 bits of each of those channels as
               a 48 bit scaler. In the timestamp mode, the scaler values are 
               latched when a logic signal arrives on control input 1, because
               the module is configured for control input mode 1.

The **config** sub-command configures the options
               for the scaler `name`.  The configuration
               is expressed as a series of one or more
               `option value` pairs.  Options may have
               default values and are validity checked to ensure that
               valid values are supplied.  See OPTIONS below for more information
               about the option keywords that are supported and their legal values.

The **cget** sub-command returns the current module
               configuration.  The configuration is returned as a Tcl list of
               `option value` pairs.  See
               OPTIONS below for a description of the options ans values
               that are returned.  You should not rely on the list being in any
               specific order.  While the list will have a deterministic order,
               if additional option keywords are added later on, this order may
               change.

<a name="AEN73400"></a>## OPTIONS



`-base` `value`Allows you to override the initial base address of the module,
                  specified when the module was created.

`-timestamp` `on | off`If this option is true, the scaler is read in timestamp mode as
                    2 48 bit scalers.  If false (the default), 32 bits are read for
                    each channel.  This defaults to off.
		    Note that normally if `-timestamp ` is on,
		    this module will be put in the event stack.

`-inputmode` `mode`Sets the input mode for the module.  The input mode
					determines the meaning of the NIM inputs on the
					module.  Note that the default value for this depends
					on the value of `-timestamp`.
					Valid values for `mode` are:



defaultChoose the  appropriate default value for the
							 the input mode depending on the value of
							 `-timestamp`.  See the discussion
							 of the default value below.

NoneSelects input mode 0.  None of the inputs have
							 any meaning.

LNEInhLNESelects input mode 1.  In this input mode,
							input 1 latches the scaler value and
							input 4 inhibits that signal.  The other
							inputs are connected to external user bit 1
							and 2 and are irrelevant because this driver
							does not provide access to those bits..

LNEInhbothSelects input mode 2.  This mode is identical
							to LNEInhLNE except that
							input 3 additionaly inhibits all scaler
							channels from counting.

LNEInhCountSelects input mode 3. In this mode,
								input 1 is the latch input and input
								4 inhibits all scaler channels from
								counting

Inh4sThe inputs inhibit 4 banks of 8 scalers
							(Mode 4).  As there is no input dedicated
							to LNE (latch) using this mode in timestamp
							mode will result in a warning.  Input 1
							inhibits channels 0-7, Input 2 8-15 and so on.

LNEHiScalMode 5.  Input 1 is a latch input, input 1
						starts the module Hiscal count.  This mode is
						not supported by NSCLDAQ at present.

LNEInhClrMode 6.  Input 1 is a latch pulse, Input
						2 inhibits counting in all channels
						Input 3 clears all scalers.

The default value for this parameter depends on the
					value of `-timestamp` and is computed
					at the start of each run, if necessary.
					In timestamp mode the default value is
					LNEInhLNE.  If not timestamp mode,
					the default is Inh4s.

`-outputmode` `mode`Configures the module's oputput mode; The meaning
					of the outputs.  If not configured
					clock50Mhz (mode 1) is used
					by default.  Legal values for the
					`mode` are:



clock50MhzMode 1 (default), Output 5 echoes the LNE.
						Outupt 7 is a 50MHz clock.

LNEAndLedMode 0 - Output 5 echoes the LNE and
					output 8 is the user output (not used by this
					software).

clock2x10MhzMode 2 - Output 5 is the LNE.  Output 6,7 are both
					10MHz clocks.   Output 8 is the user LED (not
					used by this software).

clock1x10MhzMode3 - Output 5 is the LNE, output 6 a
					10MHz clock.  Output 7,8 are not usable by this
					software.

<a name="AEN73501"></a>## EXAMPLES

The example below configures an SIS 3820 scaler to have a base
               address of 0x38000000

<a name="AEN73504"></a>**Example 1. Configuring an SIS3820 scaler module**

```
sis3820 create scaler1 0x38000000
               
```

---

|  |  |  |
| --- | --- | --- |
| Prev | Home | Next |
| sis330x | Up | v830 |
